aws-eks/cdk/vpc/cdk.out/VpcStack.template.json
{
 "Resources": {
  "eksvpc24660B53": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "eks-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/Resource"
   }
  },
  "eksvpcpublicSubnet1SubnetA381ACA2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet1/Subnet"
   }
  },
  "eksvpcpublicSubnet1RouteTable9F0CCD56": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet1/RouteTable"
   }
  },
  "eksvpcpublicSubnet1RouteTableAssociation32487141": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "eksvpcpublicSubnet1RouteTable9F0CCD56"
    },
    "SubnetId": {
     "Ref": "eksvpcpublicSubnet1SubnetA381ACA2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "eksvpcpublicSubnet1DefaultRoute70073153": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "eksvpcIGW46170B07"
    },
    "RouteTableId": {
     "Ref": "eksvpcpublicSubnet1RouteTable9F0CCD56"
    }
   },
   "DependsOn": [
    "eksvpcVPCGW02894A73"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet1/DefaultRoute"
   }
  },
  "eksvpcpublicSubnet1EIP1231726F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet1/EIP"
   }
  },
  "eksvpcpublicSubnet1NATGatewayF159B901": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "eksvpcpublicSubnet1EIP1231726F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "eksvpcpublicSubnet1SubnetA381ACA2"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "eksvpcpublicSubnet1DefaultRoute70073153",
    "eksvpcpublicSubnet1RouteTableAssociation32487141"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet1/NATGateway"
   }
  },
  "eksvpcpublicSubnet2SubnetDF5D1D55": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet2/Subnet"
   }
  },
  "eksvpcpublicSubnet2RouteTableC5701019": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet2/RouteTable"
   }
  },
  "eksvpcpublicSubnet2RouteTableAssociationF75FDCA3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "eksvpcpublicSubnet2RouteTableC5701019"
    },
    "SubnetId": {
     "Ref": "eksvpcpublicSubnet2SubnetDF5D1D55"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "eksvpcpublicSubnet2DefaultRoute0C95ED15": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "eksvpcIGW46170B07"
    },
    "RouteTableId": {
     "Ref": "eksvpcpublicSubnet2RouteTableC5701019"
    }
   },
   "DependsOn": [
    "eksvpcVPCGW02894A73"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/publicSubnet2/DefaultRoute"
   }
  },
  "eksvpcprivateSubnet1SubnetC1DABB39": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet1/Subnet"
   }
  },
  "eksvpcprivateSubnet1RouteTable803B83E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet1/RouteTable"
   }
  },
  "eksvpcprivateSubnet1RouteTableAssociationBC7C4419": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "eksvpcprivateSubnet1RouteTable803B83E5"
    },
    "SubnetId": {
     "Ref": "eksvpcprivateSubnet1SubnetC1DABB39"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "eksvpcprivateSubnet1DefaultRoute3D5CEF13": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "eksvpcpublicSubnet1NATGatewayF159B901"
    },
    "RouteTableId": {
     "Ref": "eksvpcprivateSubnet1RouteTable803B83E5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet1/DefaultRoute"
   }
  },
  "eksvpcprivateSubnet2Subnet5998C4CF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet2/Subnet"
   }
  },
  "eksvpcprivateSubnet2RouteTable9AEC1A8C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/eks-vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet2/RouteTable"
   }
  },
  "eksvpcprivateSubnet2RouteTableAssociationB9B38E99": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "eksvpcprivateSubnet2RouteTable9AEC1A8C"
    },
    "SubnetId": {
     "Ref": "eksvpcprivateSubnet2Subnet5998C4CF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "eksvpcprivateSubnet2DefaultRouteDE7DF61A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "eksvpcpublicSubnet1NATGatewayF159B901"
    },
    "RouteTableId": {
     "Ref": "eksvpcprivateSubnet2RouteTable9AEC1A8C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/privateSubnet2/DefaultRoute"
   }
  },
  "eksvpcIGW46170B07": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "eks-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/IGW"
   }
  },
  "eksvpcVPCGW02894A73": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "eksvpcIGW46170B07"
    },
    "VpcId": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/VPCGW"
   }
  },
  "eksvpcRestrictDefaultSecurityGroupCustomResource94F80B2A": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "eksvpc24660B53",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "eksvpc24660B53",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "4b996a3e5a083d5c78c6f30a8571a94fb7ec557eecbe54dbc065faba0d9076e6.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.4b996a3e5a083d5c78c6f30a8571a94fb7ec557eecbe54dbc065faba0d9076e6",
    "aws:asset:property": "Code"
   }
  },
  "eksvpcparm3CF36951": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Description": "Created VPC for EKS",
    "Name": "/network/eks-vpc",
    "Type": "String",
    "Value": {
     "Ref": "eksvpc24660B53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/eks-vpc-parm/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/21QQW7DIBB8S+6YtFZkqcfIqqpcKuREuVYYb91NDFSwJK0s/72L0oZLTzszDMMstXxqZL3S11iZ4VxN2Mt5T9qcBUtvM5hazsdPI9p3d1StUKmf0OxT74CyVlDnE8FB9xMUvWjbGL1BTejd3ZzB807l8arpRRNc9bdQAS8MS/DOEQTGf4Zbk1+2Je76YcHRImK0uXtANyodtAW+l913siyig+hTMPx2iuRtodzp/yMV/AUHTuIVgPhrRs7P/ta7AfNCixj9o6wfZLOe0KWvtbZDs1mdImIVkiO0ILvb/AFPL4FlbgEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
